--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Agdasima', sans-serif;
+    background-color: #f1ddbf;
+    font-size: larger;
 }
 
 .home-body {
@@ -13,6 +15,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
+    background-color: white;
 }
 
 .grid-container {
@@ -37,7 +40,7 @@ header .header-icons-container {
     width: 100%;
     height: 50px;
     display: grid;
-    background-color: #47cfac;
+    background-color: #92BA92;
 }
 
 header .icons {
@@ -52,7 +55,7 @@ header .icons {
 }
 
 header .icons span {
-    color: white;
+    color: #f1ddbf;
 }
 
 nav {
@@ -91,21 +94,24 @@ nav .profile-link a {
     display:grid;
     grid-row: repeat(4, 1fr);
     height:600px;
-    background-image: url("../assets/img/Cover.png");
+    background-image: url("../assets/img/Toronto-14-04-09-artscience-cafe-osc-crop-small-1.jpg");
     background-size:cover;
     background-position: center;
 }
 
 .intro {
-    color: white;
+    color: black;
     grid-row: 2 / 3;
     margin: auto;
+    margin-top: 35%;
+    padding-bottom: 20px;
     font-family: 'Agdasima', sans-serif;
     font-size: 40px;
 }
 
-button {
-    background-color: #47cfac;
+button, .blogs-button {
+    background-color: #92BA92;
+    border-radius: 11px;
     color: black;
     width: 80px;
     letter-spacing: 2px;
@@ -115,6 +121,11 @@ button {
     font-family: 'VT323', monospace;
 }
 
+button:hover, .blogs-button:hover {
+    background-color: #525e75;
+    color: #92BA92
+}
+
 .blogs-main {
     display: grid;
     font-family: 'Agdasima', sans-serif;
@@ -122,8 +133,12 @@ button {
 }
 
 .blogs-news-container {
-    background-color: #e6e9ed;
+    background-color: #78938a;
+    border-radius: 15px;
     padding: 0px 50px 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    box-shadow: 5px 5px;
 }
 
 .blogs-main-new {
@@ -153,15 +168,16 @@ button {
 }
 
 .blogs-posts-container h3 {
-    border-bottom: 1px solid #cdd2da;
+    border-bottom: 1px solid #525e75;
     padding-bottom: 20px;
     text-align: center;
 }
 
 .blogs-button {
-    border: 1px solid #47cfac;
+    border: 1px solid #92BA92;
     padding: 10px 15px;
     font-size: 17px;
+    border-radius: 12px;
 }
 
 .blogs-posts-container .post-container {
@@ -182,13 +198,13 @@ button {
 footer {
     width: 100%;
     height: 80px;
-    background-color: #22272d;
-    border-top: 35px solid #47cfac;
+    background-color: #92BA92 ;
+    border-top: 35px solid #525e75;
     text-align: center;
 }
 
 footer p {
-    color: white;
+    color: black;
     margin-top: 30px;
     font-family: 'VT323', monospace;
     font-size: larger;
@@ -209,7 +225,7 @@ footer p {
 }
 
 .blogpost-main-container h3 {
-    border-bottom: 1px solid #cdd2da;
+    border-bottom: 1px solid #525e75;
     font-size: 28px;
     padding-bottom: 20px;
 }
@@ -226,7 +242,7 @@ footer p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-row: 1;
-    background-color: #cdd2da;
+    background-color: #78938a;
     margin-bottom: 0;
     font-family: 'Agdasima', sans-serif;
 
